# ARBoardGame

./: .gitignore  CMakeLists.txt  ReadMe.md
doc/: SimilarProjects.md
include/: arExceptions.hpp  launcherdialog.hpp  logger.hpp  nonAssignable.hpp  pattern.hpp  surfDetectable.hpp  visionEngine.hpp
lib/: ReadMe.md
src/: launcherdialog.cpp  main.cpp  pattern.cpp  surfDetectable.cpp  visionEngine.cpp
